fix: break heroheader h1 only on tablet

--- a/styles/home.css
+++ b/styles/home.css
@@ -86,6 +86,10 @@
     padding-bottom: 24px;
   }
 
+  #hero h1 br {
+    display: none;
+  }
+
   #features {
     padding-top: 24px;
     padding-bottom: 16px;
@@ -121,6 +125,10 @@
   .banner h1 {
     padding-top: 0;
     padding-bottom: 32px;
+  }
+
+  #hero h1 br {
+    display: inline;
   }
 
   #features {
